# humanoid_walk

./: .gitignore  README.md  jrl-walkgen.rdmanifest  jrl-walkgen.rdmanifest.xml  rosdep.yaml  stack.xml
halfsteps_pattern_generator/: CMakeLists.txt  mainpage.dox  manifest.xml
halfsteps_pattern_generator/include/: binary.hh  halfsteps_pattern_generator.hh  yaml.hh
halfsteps_pattern_generator/msg/: Footprint.msg
halfsteps_pattern_generator/samples/: tutorial_getting_started.py
halfsteps_pattern_generator/src/halfsteps_pattern_generator/: GetPathClient.py
halfsteps_pattern_generator/src/libhalfsteps_pattern_generator/: halfsteps_pattern_generator.cpp  newPGstepStudy.cpp  newPGstepStudy.h
halfsteps_pattern_generator/src/nodes/: generator.cpp
halfsteps_pattern_generator/srv/: GetPath.srv
halfsteps_pattern_generator/test/: call_srv.py  pattern-generator.cpp
walk_interfaces/: CMakeLists.txt  mainpage.dox  manifest.xml
walk_interfaces/include/walk_interfaces/: binary.hh  binary.hxx  discretized-trajectory.hh  discretized-trajectory.hxx  pattern-generator.hh  pattern-generator.hxx  stamped-footprint.hh  stamped-footprint.hxx  stamped-footstep.hh  stamped-footstep.hxx  stamped-position.hh  trajectory.hh  trajectory.hxx  types.hh  util.hh  yaml.hh  yaml.hxx
walk_interfaces/test/: dummy-pattern-generator.cpp  stamped-position.cpp  trajectory-3d.cpp
walk_msgs/: CMakeLists.txt  mainpage.dox  manifest.xml  walking_trajectories.vcg
walk_msgs/include/walk_msgs/: abstract-node.hh  abstract-node.hxx  conversion.hh
walk_msgs/msg/: Footprint2d.msg  PathPoint2d.msg  PathPoint3d.msg  Point2dStamped.msg  WalkPath.msg
walk_msgs/src/: conversion.cpp
walk_msgs/src/nodes/: generator.cpp
walk_msgs/src/walk_msgs/: GetPathClient.py
walk_msgs/srv/: GetPath.srv
walk_tools/: manifest.xml
walk_tools/scripts/: effort_monitor  force_monitor  zmp_monitor.py
